[metadata]
name = pnowosie.ifirma-api
version = 1.3.1
description = iFirma API client.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pnowosie/ifirma-api
author = Paweł Nowosielski
author_email = "Paweł Nowosielski" <nowosielski@gmail.com>
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent
python_requires = >=3.8

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    requests>=2.26
    pyyaml>=6.0

[options.packages.find]
where = src
exclude =
    test*

######################
# Tool configuration #
######################

[tool:pytest]
testpaths = test
addopts = --cov --strict-markers
xfail_strict = True

[coverage:run]
source = ifirma
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/ifirma
    */site-packages/ifirma

[flake8]
max-line-length = 120

[tox:tox]
envlist = py38,py312
isolated_build = True

[testenv]
deps =
    pytest
    pytest-cov
#    pytest-randomly
commands =
    pytest {posargs}

[testenv:format]
skip_install = True
deps =
    black
commands =
    black {posargs:--check --diff src test}

[testenv:lint]
skip_install = True
deps =
    flake8
    flake8-bugbear
commands =
    flake8 {posargs:src test}
